@@ -1270,29 +1270,28 @@ function(reverse = FALSE, recursive = FALSE)
 
 ### ** .get_standard_repository_URLs
 
+## Usage in e.g. CRAN_baseurl_for_web_area assumes this returns a
+## valid CRAN mirror as its first element.
+## That used not to be guaranteed, and it is still unchecked.
 .get_standard_repository_URLs <-
-function()
-{
-    repos <- Sys.getenv("_R_CHECK_XREFS_REPOSITORIES_", "")
-    if(nzchar(repos)) {
-        repos <-
-            .expand_BioC_repository_URLs(strsplit(repos, " +")[[1L]])
-    } else {
-        nms <- c("CRAN", "BioCsoft", "BioCann", "BioCexp")
-        repos <- getOption("repos")
-        ## This is set by utils:::.onLoad(), hence may be NULL.
-        if(!is.null(repos) &&
-           !anyNA(repos[nms]) &&
-           (repos["CRAN"] != "@CRAN@"))
-            repos <- repos[nms]
-        else {
-            repos <- .get_repositories()[nms, "URL"]
-            names(repos) <- nms
-            if(repos["CRAN"] == "@CRAN@")
-                repos["CRAN"] <- "https://CRAN.R-project.org"
-        }
-    }
-    repos
+function(ForXrefs = FALSE)
+ {
+     if(nzchar(repos <- Sys.getenv("_R_CHECK_XREFS_REPOSITORIES_", "")))
+         return(.expand_BioC_repository_URLs(strsplit(repos, " +")[[1L]]))
+
+     nms <- c("CRAN", "BioCsoft", "BioCann", "BioCexp")
+     repos <- getOption("repos")
+     ## This is set by utils:::.onLoad(), hence may be NULL.
+     if(!is.null(repos) && !anyNA(repos[nms]) && (repos["CRAN"] != "@CRAN@"))
+         repos <- repos[nms]
+     else {
+         repos <- .get_repositories()[nms, "URL"]
+         names(repos) <- nms
+         ## That might not contain an entry for CRAN
+         if(is.na(repos["CRAN"]) || repos["CRAN"] == "@CRAN@")
+             repos["CRAN"] <- "https://CRAN.R-project.org"
+     }
+     repos
 }
 
 ### ** .get_standard_repository_db_fields
